--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,59 +1,149 @@
-html, body {
-    background-color: #fff;
-    color: #636b6f;
-    font-family: 'Nunito', sans-serif;
-    font-weight: 200;
-    height: 100vh;
-    margin: 0;
-}
-.full-height {
-    height: 100vh;
-}
-.flex-center {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-.position-ref {
-    position: relative;
-}
-.top-right {
-    position: absolute;
-    right: 10px;
-    top: 18px;
-}
-.content {
-    text-align: center;
-}
-.title {
-    font-size: 84px;
-}
-.links > a {
-    color: #636b6f;
-    padding: 0 25px;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-.m-b-md {
-    margin-bottom: 30px;
-}
-
-header {
-    padding: 20px;
-    text-align:center;
+html,
+body {
+  background-color: #fff;
+  color: #636b6f;
+  font-family: "Nunito", sans-serif;
+  font-weight: 200;
+  height: 100vh;
+  margin: 0;
 }
 
 .logo {
-    width:100px;
-    height: auto;
+  width: 100px;
 }
 
+.full-height {
+  height: 100vh;
+}
 
-footer{
-    background: #eee;
-    padding: 20px;
-    text-align:center;
+.flex-center {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.position-ref {
+  position: relative;
+}
+
+.top-right {
+  position: absolute;
+  right: 10px;
+  top: 18px;
+}
+
+.content {
+  text-align: center;
+}
+
+.links > a {
+  color: #636b6f;
+  padding: 0 25px;
+  font-size: 13px;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.m-b-md {
+  margin-bottom: 30px;
+}
+
+footer {
+  background: #eee;
+  padding: 20px;
+  text-align: center;
+}
+
+.title {
+  font-size: 50px;
+  text-transform: uppercase;
+  border-bottom: 2px solid;
+  padding: 12px 0;
+  color: #be1e2d;
+}
+
+.wrapper {
+  max-width: 1140px;
+  padding: 10px;
+  margin: 20px auto;
+}
+
+/* create wine form */
+.create-wine {
+  background: #f7f7f7;
+  padding: 20px;
+}
+.create-wine label,
+.create-wine select {
+  display: block;
+}
+.create-wine label {
+  margin-top: 30px;
+}
+.create-wine select {
+  padding: 8px;
+  width: 200px;
+}
+.create-wine input[type=checkbox] {
+  margin: 10px;
+}
+.create-wine input[type=submit] {
+  background: #be1e2d;
+  padding: 8px 20px;
+  color: #fff;
+  border: 0;
+  margin-top: 20px;
+}
+.create-wine fieldset {
+  border: 0;
+}
+
+/* wine details page */
+.wine-details {
+  background: #f7f7f7;
+  padding: 20px;
+}
+.wine-details p {
+  margin: 20px 0;
+  font-weight: bold;
+}
+.wine-details button {
+  background: #be1e2d;
+  padding: 8px 20px;
+  color: #fff;
+  border: 0;
+  margin-top: 20px;
+}
+
+a.back {
+  display: block;
+  text-align: center;
+  margin-top: 30px;
+  color: #be1e2d;
+  margin-bottom: 20px;
+}
+
+/* wine index page */
+.wine-index h1 {
+  margin-bottom: 40px;
+}
+.wine-index .wine-item {
+  margin: 10px 0;
+  padding: 12px;
+  background: #f4f4f4;
+}
+.wine-index .wine-item img {
+  width: 60px;
+  display: inline-block;
+}
+.wine-index .wine-item h4 {
+  display: inline-block;
+  font-weight: normal;
+  margin-left: 20px;
+}
+.wine-index .wine-item h4 a {
+  color: #777;
+  text-decoration: none !important;
 }
